--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "cache:clear": "rm -rf ./.cache"
   },
   "dependencies": {
+    "@types/d3": "^7.4.0",
+    "d3": "^7.8.3",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
