--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   "dependencies": {
     "@types/d3": "^7.4.0",
     "d3": "^7.8.3",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "yaml": "^2.2.2"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.191",
