--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@types/d3": "^7.4.0",
     "d3": "^7.8.3",
+    "fuse.js": "^6.6.2",
     "lodash": "^4.17.21",
     "yaml": "^2.2.2"
   },
